version 2.1-beta4  XX-Dec-2012
. [FIX] CocosDenshion: Mute can be called before loading a file (issue #1434)
. [FIX] Transitions: Fixed possible memory leak in some tranitions.
. [FIX] Tests: Box2dTestBed: Using new API for touches/accelerometer


version 2.1-beta3  7-Nov-2012
. [NEW] Clipping Node: New node that let's you clip objects inside it. Check the demos!
. [NEW] Node API additions:
		Added: removeChild. Calls removeChild:cleanup: with cleanup=YES
		Added: removeChildByTag. Calls removeChildByTag:cleanup: with cleanup=YES
		Added: removeFromParent. Calls removeFromParentAndCleanup: with cleanup=YES
		Added: removeAllChildren. Calls removeAllChildrenWithCleanup: with cleanup=YES
. [NEW] EventDispatcher: Adds support for gestures in OSX
. [NEW] Layer: Added support of gestures in OSX
. [NEW] RenderTexture: Supports "auto rendering" its children to the texture. No need to call being/end
. [NEW] Scheduler: It is possible to schedule blocks too.
. [NEW] Tests: Added 'JS CocosDragon'. Shows the power of CocosBuilder + JS
. [FIX] Actions: TargetedAction can be copied. Calls super correctly
		Blink: "stop" restores original "visibility" state
		BezierTo: works with Repeat (issue #1008)
		CatmullRom: No "bouncing". Fixed interpolation (issue #1441)
. [FIX] Director: Fixed possible retain cycle with the delegate
		Fixed possible crash when purgeCacheData is called before the view is initialized (issue #1440)
. [FIX] Dispatcher: Queueing nested events works as expected (issue #1279, #1410)
. [FIX] Director: Returns correct GL value for coordinates event in custom projections
. [FIX] Documentation: Fixes DrawingPrimitives doc (issue #1409)
. [FIX] GL Cache: when texture is deleted, it is removed form teh GL cache (issue #1429)
. [FIX] LabelAtlas: Honors the directory of the .plist file when loading the .png file
. [FIX] LabelBMFont: Does not crash if it can't parse the FNT. Instead it logs an error and return nil
		contextSize honors shadows and strokes